# heat_eq_solver

./: CMakeCache.txt  CMakeLists.txt  Makefile  aa.html  cmake_install.cmake  heat-equation.md  heatEqnSolver
src/: exceptions.h  heatEqnSolver.cxx  part1.cpp  part3.cpp  part4.cpp  sparseMatrix.cpp  sparseMatrix.h
